# Final_Answer

./: pyproject.toml
Exercise_for_pool/python/ex1_web-scraping/: 1-1.csv  1-1.py  1-2.csv  1-2.py
